Fix contrast on pure-css menu link when hover
Superseeds #1162

--- a/templates/style/_navbar.scss
+++ b/templates/style/_navbar.scss
@@ -44,6 +44,13 @@ div.nav-container {
             background-color: inherit;
         }
 
+        // Improves menu link readability when inverting the colors on focus.
+        // Vendor do background-color #eee, looks weird on different theme.
+        &:focus {
+            color: var(--color-background);
+            background-color: var(--color-doc-link-background);
+        }
+
         &.crate-name {
             text-overflow: ellipsis;
             overflow: hidden;
